[package]
name = "awscloud_sso"
version = "1.0.18"
edition = "2021"
authors = ["David Webster <dwebster182@gmail.com>"]
description = "A cli binary for getting credentials from AWS SSO."
license = "MIT"
repository = "https://github.com/davidwebstar34/awscloud_sso"
homepage = "https://github.com/davidwebstar34/awscloud_sso"
documentation = "https://docs.rs/awscloud_sso"
keywords = ["aws", "sso", "rust"]

[dependencies]
awscloud_sso_cred_helper = "1.11.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
